--- a/flutter-project/myflutter/pubspec.yaml
+++ b/flutter-project/myflutter/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   uuid: ^4.4.2
+  intl: ^0.18.0
 
 
   # The following adds the Cupertino Icons font to your application.
